saved the changes

--- a/3_Skills_Trend.ipynb
+++ b/3_Skills_Trend.ipynb
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,9 @@
     "\n",
     "for index in range(5):\n",
     "    offset = 0.8 if index % 2 == 0 else -0.5\n",
-    "    plt.text(11.1,df_plot.iloc[-1,index] + offset,df_plot.columns[index])\n"
+    "    plt.text(11.1,df_plot.iloc[-1,index] + offset,df_plot.columns[index])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
